--- a/Tmacmall-nginx.conf
+++ b/Tmacmall-nginx.conf
@@ -1,8 +1,9 @@
-server {
+server {  
     listen 80;
     server_name 47.106.183.192;
     access_log /etc/nginx/logs/access.log combined;
-
+    index index.html index.jsp index.php;
+    
     location = / {
         root /product/front/mmall-m/dist/view;
         index index.html;
