电商项目提交

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@gitee.com:happymmallmac/mmall-m.git"
+    "url": "git@gitee.com/happymmallmac/mmall-m.git"
   },
   "author": "lizhh <15156692746@163.com>",
   "license": "MIT",
